Buil docker viewv3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         # Поэтому подключаемся к 127.0.0.1
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
-      # Команд стало больше одной; /ставим символ | и пишем команды построчно
+      # Команд стало больше одной; ставим символ | и пишем команды построчно
       run: |
         python -m flake8
         cd backend/
