--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,8 +133,6 @@ jobs:
     name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
     steps:
-      - name: List files in working directory
-        run: ls -R
       - name: Check out the repo
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
@@ -147,7 +145,7 @@ jobs:
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
-          context: ./nginx/
+          context: ./gateway/
           push: true
           # Тут вместо username должен быть ваш логин на DockerHub
           tags: evilboooy/taski_gateway:latest
